# chkchn

./: Makefile  Makefile.am  Makefile.in  Makefile.translit  Makefile~  README.md  aclocal.m4  alltest.sh  alltest.test  antiflag.lexc  antiflag.twoc  antitest.test  check.py  check_negative.txt  ckt.hfst  ckt.hfstol  ckt.lat_to_cyrl.lexc  ckt.lat_to_cyrl.twol  ckt.lexc  ckt.lexc.hfst  ckt.reverse.hfst  ckt.reverse.hfstol  ckt.rules.lexc  ckt.twoc  ckt.twoc.hfst  ckt.twol  ckt.twol.hfst  cmds  configure.ac  diff_words.txt  dontget.lexc  instructions.txt  intr.txt  issues.txt  lat_to_cyr.twol  make_and_count.sh  neg.test.test  negative.tmp  new_words.lexc  new_words.txt  (+21 more)
Chukchi corpus1/fiction/: Оравэтльан вагыргын Рытгэв.docx  Ятгыргын.doc  рытхэу пынылтэлтэ.docx  тынэнны.docx
Chukchi corpus1/folklore/: kto samyi silnyi na zemle.docx  skazki sobrannye yatgyrgynom.doc
Chukchi corpus1/folklore/bogoraz materialy i mify/: ChukcheeTexts-Bogoras-cyryllic.doc  Материалы сверка2.doc
Chukchi corpus1/periodicals/: Мургин нутэнут ынкъам Ыяакэн Эйгыскын.doc
apertium-cleanstream/: apertium-cleanstream
apertium-cleanstream/.svn/: wc.db
before/: antiflag_lookup.output  hfst.hfst  lexc.hfst  lexc.lexc  twol.hfst  twol.twol
corpora/: ckt.crp.txt  ckt.hitparade.txt  corpus-stat-res-lower.txt  corpus-stat-res.txt  diff.txt  get_diff.py  hitparade.txt  kym-sver.txt  random.txt  shouldve.txt  unknown.txt
corpora/corporatxt/: fiction1Orawetlan  fiction2rethew  folklore1olenevodov  folklore2bogoraz  periodicals
corpora/folklore/: Skazki chukchej-olenevodov.doc  skazki sobrannye belikovym.doc
eval/: evaluation.tsv
lexicons/: misc.lexc  nom_rules.lexc  nominals.lexc  nominalt.lexc  nominalu.lexc  pronouns.lexc  verb_deriv.lexc  verb_rules.lexc  verbs.lexc  verbs_deriv.lexc  verbs_manual.lexc  verbt.lexc  verbu.lexc  verbv.lexc
meetings/: 2017-05-06.txt
scripts/: Untitled.ipynb  classes_indices.json  corpus-stat.sh  dictionary.json  dictionary_all_unparsed.json  dictionary_unparsed.json  get_verbs_from_vdict.py  getting_new_words.py  getting_vocabulary.py  hitparade.sh  misc.json  not_only_nouns.ipynb  preprocess.sh  process_verbs.py  raskidatel.ipynb  sort_new_words.py  undone.json  verbs.ipynb  verbs_unparsed.json  zapisyvatel.ipynb
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  not_only_nouns-checkpoint.ipynb  raskidatel-checkpoint.ipynb  verbs-checkpoint.ipynb  zapisyvatel-checkpoint.ipynb
translit/: Makefile  ckt.lat_to_cyrl.lexc  ckt.lat_to_cyrl.twol  test.lat_to_cyrl.out
